--- a/DJIExtensionDemo/Base.lproj/Main.storyboard
+++ b/DJIExtensionDemo/Base.lproj/Main.storyboard
@@ -82,6 +82,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="p99-KF-Phu" kind="show" id="g1I-Ae-mcG"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -156,7 +159,125 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gHh-qK-cxn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1591" y="-537"/>
+            <point key="canvasLocation" x="1772" y="-691"/>
+        </scene>
+        <!--ExtraWaypoint-->
+        <scene sceneID="F6y-yy-6G6">
+            <objects>
+                <viewController title="ExtraWaypoint" id="p99-KF-Phu" customClass="ExtraWaypointMissionViewController" customModule="DJIExtensionDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tmN-6k-bQW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="start coordinate:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6g0-MB-C90">
+                                <rect key="frame" x="16" y="80" width="126.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="lat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eo6-el-Qcp">
+                                <rect key="frame" x="16" y="108.5" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="ZcV-uZ-1D5"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="long" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i0S-PH-98Y">
+                                <rect key="frame" x="16" y="146.5" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Sfq-5t-mxj"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="waypoints count:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYX-NG-6Ex">
+                                <rect key="frame" x="16" y="192.5" width="130" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4h8-3P-dXb">
+                                <rect key="frame" x="16" y="221" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="RYR-ic-CfC"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gV1-oC-34y">
+                                <rect key="frame" x="80.5" y="613" width="214" height="34"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fX2-mG-zbf">
+                                        <rect key="frame" x="0.0" y="0.0" width="38" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="start"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLX-xh-tRL">
+                                        <rect key="frame" x="48" y="0.0" width="49" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="pause"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtG-DA-RpE">
+                                        <rect key="frame" x="107" y="0.0" width="61" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="resume"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c7S-Y1-k68">
+                                        <rect key="frame" x="178" y="0.0" width="36" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="stop"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="execute state" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kod-Nj-xah">
+                                <rect key="frame" x="133.5" y="271" width="108.5" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="waypointIndex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gih-HC-hgY">
+                                <rect key="frame" x="129.5" y="300.5" width="116.5" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="i0S-PH-98Y" firstAttribute="leading" secondItem="Aqk-RK-G8p" secondAttribute="leading" constant="16" id="MDx-KA-00c"/>
+                            <constraint firstItem="gV1-oC-34y" firstAttribute="centerX" secondItem="tmN-6k-bQW" secondAttribute="centerX" id="MMM-cm-Q5U"/>
+                            <constraint firstItem="mYX-NG-6Ex" firstAttribute="top" secondItem="i0S-PH-98Y" secondAttribute="bottom" constant="16" id="MmK-Jh-tPE"/>
+                            <constraint firstItem="kod-Nj-xah" firstAttribute="top" secondItem="4h8-3P-dXb" secondAttribute="bottom" constant="20" id="PQi-N5-Ugk"/>
+                            <constraint firstItem="kod-Nj-xah" firstAttribute="centerX" secondItem="tmN-6k-bQW" secondAttribute="centerX" id="T44-Sp-bS9"/>
+                            <constraint firstItem="mYX-NG-6Ex" firstAttribute="leading" secondItem="Aqk-RK-G8p" secondAttribute="leading" constant="16" id="V2L-Ka-KGO"/>
+                            <constraint firstItem="i0S-PH-98Y" firstAttribute="top" secondItem="Eo6-el-Qcp" secondAttribute="bottom" constant="8" id="Wuo-Id-nz7"/>
+                            <constraint firstItem="4h8-3P-dXb" firstAttribute="leading" secondItem="Aqk-RK-G8p" secondAttribute="leading" constant="16" id="YkL-Og-KM3"/>
+                            <constraint firstItem="Eo6-el-Qcp" firstAttribute="leading" secondItem="Aqk-RK-G8p" secondAttribute="leading" constant="16" id="ae9-12-Wa1"/>
+                            <constraint firstItem="Eo6-el-Qcp" firstAttribute="top" secondItem="6g0-MB-C90" secondAttribute="bottom" constant="8" id="dbn-ba-Gne"/>
+                            <constraint firstItem="gih-HC-hgY" firstAttribute="top" secondItem="kod-Nj-xah" secondAttribute="bottom" constant="8" id="ebF-Af-CJ7"/>
+                            <constraint firstItem="gih-HC-hgY" firstAttribute="centerX" secondItem="tmN-6k-bQW" secondAttribute="centerX" id="j1Q-Zb-zi2"/>
+                            <constraint firstItem="4h8-3P-dXb" firstAttribute="top" secondItem="mYX-NG-6Ex" secondAttribute="bottom" constant="8" id="rpd-7V-Voq"/>
+                            <constraint firstItem="6g0-MB-C90" firstAttribute="top" secondItem="Aqk-RK-G8p" secondAttribute="top" constant="16" id="trt-36-f6X"/>
+                            <constraint firstItem="Aqk-RK-G8p" firstAttribute="bottom" secondItem="gV1-oC-34y" secondAttribute="bottom" constant="20" id="v1R-YQ-O97"/>
+                            <constraint firstItem="6g0-MB-C90" firstAttribute="leading" secondItem="Aqk-RK-G8p" secondAttribute="leading" constant="16" id="vZd-Er-pf1"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Aqk-RK-G8p"/>
+                    </view>
+                    <connections>
+                        <outlet property="coordinateLatTextField" destination="Eo6-el-Qcp" id="hQe-ih-Yxl"/>
+                        <outlet property="coordinateLongTextField" destination="i0S-PH-98Y" id="I6A-PE-Kbj"/>
+                        <outlet property="executeStateLabel" destination="kod-Nj-xah" id="ota-8j-oxt"/>
+                        <outlet property="waypointIndex" destination="gih-HC-hgY" id="7HY-Gy-nOl"/>
+                        <outlet property="waypointsCountTextField" destination="4h8-3P-dXb" id="TUd-dc-lPz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vsB-XT-Yal" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1772" y="-8"/>
         </scene>
     </scenes>
 </document>
