--- a/DJIExtensionDemo/Base.lproj/Main.storyboard
+++ b/DJIExtensionDemo/Base.lproj/Main.storyboard
@@ -143,6 +143,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rc serialNumber" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaB-7n-2gr">
+                                <rect key="frame" x="126.5" y="219" width="122" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -152,8 +158,10 @@
                             <constraint firstItem="lvs-t1-YTY" firstAttribute="top" secondItem="gdf-B1-aU2" secondAttribute="top" constant="20" id="JhH-E9-9ui"/>
                             <constraint firstItem="gdf-B1-aU2" firstAttribute="bottom" secondItem="P29-G4-syI" secondAttribute="bottom" constant="40" id="NA6-LL-662"/>
                             <constraint firstItem="V0s-yr-jvZ" firstAttribute="centerX" secondItem="1cE-TF-Hck" secondAttribute="centerX" id="Q9d-df-fty"/>
+                            <constraint firstItem="PaB-7n-2gr" firstAttribute="top" secondItem="fAP-gh-Z5f" secondAttribute="bottom" constant="15" id="ZaC-aK-KK4"/>
                             <constraint firstItem="fAP-gh-Z5f" firstAttribute="top" secondItem="V0s-yr-jvZ" secondAttribute="bottom" constant="8" id="bjy-Tv-cd6"/>
                             <constraint firstItem="lvs-t1-YTY" firstAttribute="centerX" secondItem="1cE-TF-Hck" secondAttribute="centerX" id="dDq-kT-92K"/>
+                            <constraint firstItem="PaB-7n-2gr" firstAttribute="centerX" secondItem="1cE-TF-Hck" secondAttribute="centerX" id="kXn-1E-hY6"/>
                             <constraint firstItem="tPL-4X-UU5" firstAttribute="centerX" secondItem="1cE-TF-Hck" secondAttribute="centerX" id="qgp-eI-Qtp"/>
                             <constraint firstItem="fAP-gh-Z5f" firstAttribute="centerX" secondItem="1cE-TF-Hck" secondAttribute="centerX" id="t1L-dI-NbN"/>
                         </constraints>
@@ -164,6 +172,7 @@
                         <outlet property="lbBinding" destination="tPL-4X-UU5" id="XRh-I9-CLf"/>
                         <outlet property="lbFirmware" destination="V0s-yr-jvZ" id="NLd-Io-NCL"/>
                         <outlet property="lbPitch" destination="fAP-gh-Z5f" id="jyR-vP-VhP"/>
+                        <outlet property="lbRCSerialNumber" destination="PaB-7n-2gr" id="KJC-LK-ap1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gHh-qK-cxn" userLabel="First Responder" sceneMemberID="firstResponder"/>
